# Lesson_11.1

./: .gitignore  README.md  generators.py  main.py  orders.py  pyproject.toml  spirals.py
data/: nums.txt  orders_2.csv
src/: fibonacci.py  filter_txt_file.py  orders.py  prime_number_generator.py
tests/: test_intersection_generator.py
