[tool.poetry]
name = "lesson11-1"
version = "0.1.0"
description = ""
authors = ["Viktor Shadrin <v.vshadrin@gmail.com>"]
readme = "README.md"
packages = [{include = "lesson11"}]

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.4.1"
windows-curses = "^2.4.1"
flake8 = "^7.3.0"
black = "^25.1.0"
mypy = "^1.16.1"
isort = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
